comp-transform/testsuite/bad/OrderForLiftSum/OrderForLiftSumCompile.golden

comp-transform/testsuite/bad/OrderForLiftSum/OrderForLiftSumTransform.hs:18:4: error:
    Class Main.Eval cannot be lifted to sums!
   |
18 | $( Data.Comp.Derive.derive [Data.Comp.Derive.liftSum] [''Eval] )
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
